# flint-init

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  catalog.toml  install.sh
scripts/: boot-artix-vm.sh  create-arch-vm.sh  create-artix-vm.sh  create-openrc-vm.sh  install-flint-into-vm.sh  measure-flint-installed.sh  measure-openrc-installed.sh  measure-systemd-boot.sh  measure-systemd-installed.sh  push.sh  qemu-stage3-test.sh  qemu-test.sh
services/arch/: acpid.toml  agetty-tty1.toml  agetty-tty2.toml  agetty-tty3.toml  agetty-tty4.toml  agetty-tty5.toml  agetty-tty6.toml  dhcpcd.toml  gdm.toml  lvm2.toml  mariadb.toml  mdadm.toml  nftables.toml  polkit.toml  postfix.toml  postgresql.toml  smartd.toml  udev.toml  wpa_supplicant.toml
services/artix/: acpid.toml  agetty-tty1.toml  agetty-tty2.toml  agetty-tty3.toml  agetty-tty4.toml  agetty-tty5.toml  agetty-tty6.toml  agetty.toml  apache.toml  bluez.toml  chronyd.toml  cronie.toml  dhcpcd.toml  docker.toml  elogind.toml  fail2ban.toml  flint-watch.toml  hwclock.toml  irqbalance.toml  kmod.toml  lvm2.toml  mariadb.toml  mdadm.toml  networkmanager.toml  nfs.toml  nftables.toml  openvpn.toml  pcscd.toml  samba.toml  smartd.toml  sshd.toml  sysctl.toml  syslog-ng.toml  tor.toml  udev-trigger.toml  wpa_supplicant.toml
services/cycle/: alpha.toml  beta.toml
services/deep_chain/: alpha.toml  beta.toml  delta.toml
services/diamond/: alpha.toml  (+3 more)
src/: cache.rs  catalog.rs  config.rs  ctl_proto.rs  ctl_server.rs  executor.rs  fstab.rs  graph.rs  lib.rs  main.rs  pid1.rs  ready.rs  service.rs
tests/: test_install.bats
(+107 files in other folders)
