[package]
name = "flint-init"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flint-init"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
inotify = "0.11"
bincode = "1"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
