[package]
name = "flint-init"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[[bin]]
name = "flint-init"
path = "src/main.rs"

[[bin]]
name = "flint-ctl"
path = "src/bin/flint_ctl.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["process", "signal", "fs", "mount", "reboot"] }
inotify = "0.11"
bincode = "1"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
